# weather_api_launch

./: .gitignore  Makefile  README.md  best_lr_model.pkl  best_rf_model.pkl  pyproject.toml
app/: main.py
docs/: mkdocs.yml
docs/docs/: index.md
models/precipitation_fall/: lr_pipe.joblib  transform_pipe_LR.joblib
models/rain_or_not/: rf_pipe.joblib  transform_pipe.joblib
notebooks/precipitation_fall/: 36120-25SP-AT2-25606169-experiment-2.ipynb
notebooks/rain_or_not/: 36120-25SP-AT2-25606169-experiment-1.ipynb
repo-1/: __init__.py  dataset.py  features.py  plots.py
repo-1/modeling/: predict.py  train.py
