[project]
name = "saurabh-at2-eda-model"
version = "0.1.0"
description = ""
authors = [
    {name = "Saurabh Sabharwal",email = "sabharwalsaurabh204@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "api-helper-saurabh (>=2025.0.2.0)"
]
[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.7"
jupyterlab = "^4.4.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
